correct icon spacing with flex

--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,17 @@ hr {
     color: white;
     padding: 4px;
 }
+
+.flex-container {
+    display: flex;
+    max-width: 700px;
+}
+
+.flex-child {
+justify-content: flex-start;
+padding: 10px;
+}
+
+#icon {
+    padding: 6px;
+}
